# fire-summary

./: .gitignore  Cargo.toml  PRIVACY.md  README.md  RUST_CORE_V2.md  STORE_LISTING.md
.github/workflows/: cut-release.yml  release.yml  rust-fixtures.yml
extension/: content-script.js  diagnostics.css  diagnostics.html  diagnostics.js  discussion.css  discussion.js  manifest.firefox.android.json  manifest.firefox.desktop.json  manifest.firefox.json  manifest.json  popup.css  popup.js  settings.css  settings.html  settings.js  summary.html
extension-firefox/: discussion.css  discussion.html  manifest.json  popup.css  popup.html  settings.css  settings.html  settings.js
fixtures/rust-core-v2/: article.html  baseline.json  discussion-thread.html  docs-page.html  listing-page.html  long-form-blog.html  manifest.json  mixed-language.html  noisy-portal.html  paywalled-page.html  product-page.html  search-results.html  sparse-page.html
output/playwright/store/: discussion-showcase.html  popup-showcase.html  settings-showcase.html
scripts/: build-extension.sh  bump-version.sh  compare-rust-fixture-baseline.mjs  firefox-source-package.sh  import-rust-fixture.mjs  package-extension.sh  render-rust-fixture-comparison.mjs  render-rust-fixture-report.mjs  render-store-screenshots.mjs  run-rust-fixtures.mjs  run-rust-fixtures.sh  snapshot-rust-fixture-baseline.mjs  stage-extension-builds.sh  validate-rust-fixtures.mjs
src/: content_script_example.js  lib.rs
