[package]
name = "fire-summary"
version = "0.1.1"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "0.1.1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
# 如果需要處理 HTML 解析，可以加入：
scraper = "0.19"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.1.1", features = ["wasm_js"] }
